# pascal

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  gram.txt
compiler/src/: Ast.cpp  Ast.hpp  CMakeLists.txt  Generator.cpp  Generator.hpp  Lexer.cpp  Lexer.hpp  Main.cpp  Parser.cpp  Parser.hpp  Semantics.cpp  Semantics.hpp  ValidationUtils.hpp  Visitor.hpp
compiler/tests/: CMakeLists.txt  Expressions.hpp  Helper.hpp  Lexer.cpp  Lexer.hpp  Main.cpp  Parser.hpp  Statements.hpp  Visitor.hpp
tests/: adv_calc.pas  calc.pas  fib.pas  hello.pas
vm/: instructions.csv
vm/src/: CMakeLists.txt  Main.cpp  vm.cpp  vm.hpp
vm/tests/: CMakeLists.txt  Main.cpp  vm.hpp
